--- a/gb/22/2/3/n13553477.md
+++ b/gb/22/2/3/n13553477.md
@@ -13,12 +13,12 @@
 <p>确实，香港进入歪理横行的大时代。林郑月娥说，对徐英伟仍然感到失望。Well，“洪门宴”当中，香港特区之首的“领导能力”有多高，把香港完全“清零”，变为“死港”，这又如何计数？当权者用一个借口，把香港全方位换血，是政治任务多于一切。整个香港，变了一场赌注。用投资操盘人的角度，当权者就硬要港人接受，一个时间值极短的“末日轮”；最坏情况，“香港价值”变了零，到这时候，旧有的香港价值不再，再没有留底的理由。说到这里，“世界的香港”，确实在香港以外每个角落延续，继续走我们的“时代革命”。</p>
 <p>责任编辑：连书华</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/2/n12784423.md#1">【珍言真语】钱志健：政治凌驾一切 香港商界忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/6/18/n13031730.md#1">【珍言真语】钱志健：袭苹果日报 毁港核心价值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/15/n13305608.md#1">钱志健指国殇之柱不只是雕塑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/20/n13518548.md#1">钱志健：梁天琦出狱和香港痛失的自由</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/26/n10515170.md#1" target="_blank">林辉：蔡元培东床快婿的惨痛人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
