--- a/gb/22/2/10/n13568699.md
+++ b/gb/22/2/10/n13568699.md
@@ -13,12 +13,12 @@
 <p><em>作者简介：钱志健（Edward Chin）是资深对冲基金经理，投资经验逾20年。曾任全球大型英国伦敦上市对冲基金地区主管，目前为一间家族资产公司董事局成员，以环球长短仓为主打。他曾撰写金融著作多本，分享时事、投资与人生智慧。钱氏于2006年组织哈利车队Ride 4 Hope，盼望在金融以外做点有意义事情，作另类赢家。Email:edckchin@gmail.com。</em></p>
 <p>责任编辑：连书华</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11287543.md#1" target="_blank">纽约市七位市议员祝贺法轮大法日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/14/n11939875.md#1" target="_blank">“红色殿堂”里的刀光剑影</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
