--- a/gb/23/8/13/n14053047.md
+++ b/gb/23/8/13/n14053047.md
@@ -36,12 +36,12 @@
 <span style="color: #008000;"> <a style="color: #008000;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/2/20/n13933819.md#1" target="_blank" rel="noopener noreferrer">●想改善人际关系？关注这点妥善沟通更加分</a></span></h3>
 <p>责任编辑：曾臻</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/18/n13714481.md#1">“心存感谢”能提高共振频率 助你实现愿望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/27/n13916561.md#1">为什么人际关系不好？问自己是否缺乏同理心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/8/n13925363.md#1">人际关系也该断舍离 别把力气浪费在攀比中</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/10/n14031486.md#1">为了快乐 让自己像老年人一样思考</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/26/n11280714.md#1" target="_blank">女裁缝的别样生意经</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/6/n11029000.md#1" target="_blank">林辉：救了毛周的人 结局大多很惨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
