--- a/gb/22/7/18/n13783345.md
+++ b/gb/22/7/18/n13783345.md
@@ -7,7 +7,7 @@
 <hr>
 	<p>【大纪元2022年07月18日讯】（香港大纪元记者理尔、张瑛瑜综合报导）香港著名作家倪匡离世，《大纪元》主笔石山亦感受甚深。他从倪匡谈到香港在近代中国的角色是保留中国传统，并将之传播到世界各地。他认为香港在近代中国，以至人类历史的作用，“远远未得到研究”。</p>
 <p>长期以来，香港被称为“文化沙漠”，但石山从大陆到香港之后却有不同的感受。他认为“香港才是很中国的”，“香港话、粤语没有经过官方的改造，所以能保留很多中国文化的东西在里面，中国文化的那种韵味在里面，香港的书其实保留了很多中国文化的东西”。他发现“中国大陆才是真正的‘文化沙漠’”。</p>
-<p><a title="YouTube video player" loading="lazy" data2-src=""></a><a href="https://dh48pl2d5tlkv.cloudfront.net/P6fesv6rb"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/q6Nub5_zGOU" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a title="YouTube video player" loading="lazy" data2-src=""></a><a href="https://d2p23c289x62lr.cloudfront.net/W6nesv6rd"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/q6Nub5_zGOU" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>香港文化人传承了中华文化古风精髓</h2>
 <p>石山提到，1949年后，大量中国人从大陆逃难到香港。不过香港的移民史可以追溯到古代，中原的人为了躲避北方野蛮外族入侵，逃难到广东一带，包括香港。他指出1949年的移民潮，就是“不喜欢共产党、不喜欢那一套东西，很多人就来到了香港”，其中包括钱穆等学者。</p>
 <p>“中国人的文化人，即传承中国文化的文化人已经被共产党打得七七八八了，已经完全没有了。剩下一些在香港还有，我觉得这一点英国人是很厉害的。”石山举例，英国人在香港成立中文大学，新亚书院是其中一所，“保存了很多中国文化里面的精华在那里”。</p>
@@ -25,33 +25,33 @@
 <p>他又感慨，“现在香港沦陷了，想起都很伤心。”他指中国人完全不承认香港的价值，否定它。他认为香港在近代中国，以至人类历史的作用，是远远未得到研究。</p>
 <p>责任编辑：连书华#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/29/n11353494.md#1" target="_blank">章天亮：倾国家之力的迫害</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/28/n10878489.md#1" target="_blank">共产暴政录：文革中教师校长被打死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632431.md#1">苏东坡生活禅：东坡肉好吃的珍味秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635971.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648207.md#1">【佳音时刻】用自我革命保政权？习讲话成笑话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648192.md#1">【新闻大破解】诈骗贩毒贩运人口 涉一带一路？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648204.md#1">【新闻大家谈】美军打击运毒船 川普拒绝马杜罗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646915.md#1">彗星3I/ATLAS正发生这些奇特现象 再引争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647133.md#1">中日关系紧张 高市拟与沙特在稀土领域合作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647103.md#1">习重提“自我革命” 遭遇官场集体软抵抗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646909.md#1">滨崎步等日星演出受阻 中共外交部发言人甩锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648303.md#1">迪丽热巴新戏片酬曝光 疑为角色减重久病不愈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648331.md#1">6岁儿子调皮狂奔 刘诗诗放大招 网友笑翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646964.md#1">梁朝伟被质疑定居日本 宣传电影时首度回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647603.md#1">滨崎步零观众演出后返日 唱片公司会长批中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646574.md#1">为何无条件的感恩会让你幸福？如何培养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647181.md#1">为何冬天时你应该在窗户边放一碗盐？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647976.md#1">专家：你的伴侣无条件爱你的3个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647107.md#1">私人飞机飞行员的薪资有多少？有何优缺点？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647816.md#1">为什么每天喝柳橙汁能增进心脏健康？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/7/18/n13783345.htm">石山：香港在近代中国的作用 远远未得到研究</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/7/18/n13783345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
