--- a/gb/21/9/24/n13258439.md
+++ b/gb/21/9/24/n13258439.md
@@ -28,12 +28,12 @@
 <p>知情人士还透露说，渤健（Biogen）和苹果一起合作的研究，是希望可以帮助苹果开发一项新的 iPhone功能，让人们尽早发现轻度认知障碍，同时鼓励相关用户尽早就医。该公司将把数据和大脑健康的标准测试进行对照，包括传统的认知评估和跟踪大脑中斑块积聚的扫描。 @</p>
 <p>责任编辑：邵亦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/31/n10267172.md#1" target="_blank">许茹：迫害宗教或终止迫害 罗马皇帝不同命</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/18/n11196766.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(2)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
