--- a/gb/23/2/27/n13939246.md
+++ b/gb/23/2/27/n13939246.md
@@ -12,12 +12,12 @@
 <p>主办机构提出多项建议，包括将“内地大学升学资助计划”由学士学位课程扩大至研究院研究式课程，以及两地合办的学士学位课程。◇</p>
 <p>责任编辑：李薇</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/11/n13778761.md#1">香港中大推加强版入学奖学金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/14/n13780385.md#1">香港近半文凭试考生放榜压力达最高水平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/20/n13784880.md#1">DSE诞8状元4超级状元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/11/n13799963.md#1">香港JUPAS遴选结果公布 四成人获取录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/21/n9981424.md#1" target="_blank">林辉：中共治下红楼泪 谁解其中味？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
