--- a/gb/24/3/14/n14202333.md
+++ b/gb/24/3/14/n14202333.md
@@ -17,12 +17,12 @@
 <p>对于即将角逐香港金像奖最佳男配角奖，吴慷仁表示：“真的超级开心，能够拍摄香港电影而被提名，是这辈子都不敢想像的事，非常谢谢香港金像奖大会，期待到时候能与香港电影人在典礼好好聊天学习，我很珍惜。”</p>
 <p>责任编辑：辛幼安</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/27/n13721661.md#1">吴慷仁准备飞大马拍片 已做染疫心里准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/8/n13925498.md#1">新屋装潢不冲动结婚 吴慷仁：该来的都会来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/26/n14081514.md#1">告五人首拍广告与吴慷仁对戏 逾600万次观看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/10/n14092071.md#1">吴慷仁上节目招认怕鱼 因一番话“看清”郑元畅</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/29/n11223087.md#1" target="_blank">【征文】杨宁：中华文物之殇史无前例</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11255006.md#1" target="_blank">【征文】凌晓辉：贞洁论（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
