--- a/gb/21/10/25/n13329001.md
+++ b/gb/21/10/25/n13329001.md
@@ -29,12 +29,12 @@
 <p>吴志森指，在疫情之下西方政府也试图加强对社会的控制，例如疫苗护照等，但是遇到舆论反弹。他提到，英国政府早前也试图推行进入娱乐场所要出示疫苗护照，最终停止推行。吴志森说：“原因就是他们有制衡的力量，有反对的力量，有舆论的力量，香港基本什么都没有。”◇</p>
 <p>责任编辑：邵亦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/3/29/n2063491.md#1" target="_blank">法轮功为什么要去中南海</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/26/n10513884.md#1" target="_blank">中共用战争的方式进行土改和镇反</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
